# card_generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/card_generator/: main.py
src/card_generator/crews/piaic_card/: piaic_card.py
src/card_generator/crews/piaic_card/config/: agents.yaml  tasks.yaml
src/card_generator/tools/: custom_tool.py
